--- a/personal.html
+++ b/personal.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <section class="top-banner">
+ <section class="top-banner flexible-cont">
       
  <div class="half-width"> >
     <h1>Welcome To</h1>
@@ -39,7 +39,9 @@
  
    <div class="half-width"> <img src="images/my-bg.png"</div>
 </section>
-   <section class="dream-big">
+
+
+   <section class="dream-big flexible-cont">
      <div class="half-width">
          <img src="images/my-bg2.png">
      </div>
@@ -51,6 +53,29 @@
          <a class="resume-button" target="_blank" href="https://www.w3schools.com" >DOWNLOAD RESUME</a>
      </div>
    </section>
+
+   <section class="experience-area">
+
+<h1>experience</h1>
+
+<div id"web-developer" class="flexible-cont">
+    <div class="experience-item">
+
+        <h2>Full Stack Web Developer</h2>
+        <h3>2021-Present | Pro Level Developer</h3>
+        <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+    </div>
+    <div id"web-developer-to" class="experience-item">
+        <h2>Baby Web Developer</h2>
+        <h3>2020-2021 | Programming Hero Learner</h3>
+        <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+    </div>
+</div>
+
+   </section>
+   <footer>
+       <p>© Tasnim Billah 2021.Web develper</p>
+   </footer>
 </body>
  
 </html>
